5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4130/executions/1758_1576.log
== TEST (2019-05-21 18:00:37) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
	if():
		i = i + 1
		print("EUSAPIA")
	elif():
		j = j + 1
		print("BARSANULFO")
	else():
		k = k + 1
		print("EMPATE")
	
-- ERROR:
File "XXXX", line 10
    while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 18:00:37) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
	if():
		i = i + 1
		print("EUSAPIA")
	elif():
		j = j + 1
		print("BARSANULFO")
	else():
		k = k + 1
		print("EMPATE")
	
-- ERROR:
File "XXXX", line 10
    while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 18:00:37) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
	if():
		i = i + 1
		print("EUSAPIA")
	elif():
		j = j + 1
		print("BARSANULFO")
	else():
		k = k + 1
		print("EMPATE")
	
-- ERROR:
File "XXXX", line 10
    while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 18:00:37) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
	if():
		i = i + 1
		print("EUSAPIA")
	elif():
		j = j + 1
		print("BARSANULFO")
	else():
		k = k + 1
		print("EMPATE")
	
-- ERROR:
File "XXXX", line 10
    while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 18:00:37) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
	if():
		i = i + 1
		print("EUSAPIA")
	elif():
		j = j + 1
		print("BARSANULFO")
	else():
		k = k + 1
		print("EMPATE")
	
-- ERROR:
File "XXXX", line 10
    while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 18:00:37) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
	if():
		i = i + 1
		print("EUSAPIA")
	elif():
		j = j + 1
		print("BARSANULFO")
	else():
		k = k + 1
		print("EMPATE")
	
-- ERROR:
File "XXXX", line 10
    while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 18:00:37) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
	if():
		i = i + 1
		print("EUSAPIA")
	elif():
		j = j + 1
		print("BARSANULFO")
	else():
		k = k + 1
		print("EMPATE")
	
-- ERROR:
File "XXXX", line 10
    while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 18:00:37) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
	if():
		i = i + 1
		print("EUSAPIA")
	elif():
		j = j + 1
		print("BARSANULFO")
	else():
		k = k + 1
		print("EMPATE")
	
-- ERROR:
File "XXXX", line 10
    while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 18:00:37) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
	if():
		i = i + 1
		print("EUSAPIA")
	elif():
		j = j + 1
		print("BARSANULFO")
	else():
		k = k + 1
		print("EMPATE")
	
-- ERROR:
File "XXXX", line 10
    while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 18:00:37) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
	if():
		i = i + 1
		print("EUSAPIA")
	elif():
		j = j + 1
		print("BARSANULFO")
	else():
		k = k + 1
		print("EMPATE")
	
-- ERROR:
File "XXXX", line 10
    while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 18:00:37) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
	if():
		i = i + 1
		print("EUSAPIA")
	elif():
		j = j + 1
		print("BARSANULFO")
	else():
		k = k + 1
		print("EMPATE")
	
-- ERROR:
File "XXXX", line 10
    while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 18:00:37) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
	if():
		i = i + 1
		print("EUSAPIA")
	elif():
		j = j + 1
		print("BARSANULFO")
	else():
		k = k + 1
		print("EMPATE")
	
-- ERROR:
File "XXXX", line 10
    while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 18:00:37) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
	if():
		i = i + 1
		print("EUSAPIA")
	elif():
		j = j + 1
		print("BARSANULFO")
	else():
		k = k + 1
		print("EMPATE")
	
-- ERROR:
File "XXXX", line 10
    while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 18:00:37) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
	if():
		i = i + 1
		print("EUSAPIA")
	elif():
		j = j + 1
		print("BARSANULFO")
	else():
		k = k + 1
		print("EMPATE")
	
-- ERROR:
File "XXXX", line 10
    while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 18:00:37) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
	if():
		i = i + 1
		print("EUSAPIA")
	elif():
		j = j + 1
		print("BARSANULFO")
	else():
		k = k + 1
		print("EMPATE")
	
-- ERROR:
File "XXXX", line 10
    while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 18:00:37) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
	if():
		i = i + 1
		print("EUSAPIA")
	elif():
		j = j + 1
		print("BARSANULFO")
	else():
		k = k + 1
		print("EMPATE")
	
-- ERROR:
File "XXXX", line 10
    while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 18:00:40) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
	if():
		i = i + 1
		print("EUSAPIA")
	elif():
		j = j + 1
		print("BARSANULFO")
	else():
		k = k + 1
		print("EMPATE")
	
-- ERROR:
File "XXXX", line 10
    while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-21 18:02:19) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
	if():
		i = i + 1
		print("EUSAPIA")
	elif():
		j = j + 1
		print("BARSANULFO")
	else():
		k = k + 1
		print("EMPATE")
	
-- ERROR:
File "XXXX", line 10
    while((11 == "Pedra") and (22 == "Papel") and (33 == "Tesoura"):
                                                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:48:49) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while(i < size(v0) and size(v0) == size(v1)):
	i = i + 11
	if((v0[i] == 11 and v1[i] == 33) or (v0[i] == 22 and v1[i] == 11) or (v0[i] == 33 and v1[i] == 22)):
		j = j + 1
		print("EUSAPIA")
	elif((v1[i] == 11 and v0[i] == 33) or (v1[i] == 22 and v0[i] == 11) or (v1[i] == 33 and v0[i] == 22)):
		k = k + 1
		print("BARSANULFO")
	else(v1 > v0):
		print("EMPATE")
	
-- ERROR:
File "XXXX", line 18
    else(v1 > v0):
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:49:08) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while(i < size(v0) and size(v0) == size(v1)):
	i = i + 11
	if((v0[i] == 11 and v1[i] == 33) or (v0[i] == 22 and v1[i] == 11) or (v0[i] == 33 and v1[i] == 22)):
		j = j + 1
		print("EUSAPIA")
	elif((v1[i] == 11 and v0[i] == 33) or (v1[i] == 22 and v0[i] == 11) or (v1[i] == 33 and v0[i] == 22)):
		k = k + 1
		print("BARSANULFO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:52:23) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while(i < size(v0) and size(v0) == size(v1)):
	i = i + 11
	if((v0[i] == 11 and v1[i] == 33) or (v0[i] == 22 and v1[i] == 11) or (v0[i] == 33 and v1[i] == 22)):
		j = j + 1
	elif((v1[i] == 11 and v0[i] == 33) or (v1[i] == 22 and v0[i] == 11) or (v1[i] == 33 and v0[i] == 22)):
		k = k + 1
	else:
		i = i + 1
print(i)
if(v0 > v1):
	print("EUSAPIA")
elif(v1 > v0):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:52:30) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while(i < size(v0) and size(v0) == size(v1)):
	i = i + 11
	if((v0[i] == 11 and v1[i] == 33) or (v0[i] == 22 and v1[i] == 11) or (v0[i] == 33 and v1[i] == 22)):
		j = j + 1
	elif((v1[i] == 11 and v0[i] == 33) or (v1[i] == 22 and v0[i] == 11) or (v1[i] == 33 and v0[i] == 22)):
		k = k + 1
	else:
		i = i + 1
print(i)
if(v0 > v1):
	print("EUSAPIA")
elif(v1 > v0):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:52:48) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while(i < size(v0) and size(v0) == size(v1)):
	i = i + 11
	if((v0[i] == 11 and v1[i] == 33) or (v0[i] == 22 and v1[i] == 11) or (v0[i] == 33 and v1[i] == 22)):
		j = j + 1
	elif((v1[i] == 11 and v0[i] == 33) or (v1[i] == 22 and v0[i] == 11) or (v1[i] == 33 and v0[i] == 22)):
		k = k + 1
	else:
		i = i + 1
print(i)
if(v0 > v1):
	print("EUSAPIA")
elif(v1 > v0):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:53:10) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while(i < size(v0) and size(v0) == size(v1)):
	i = i + 1
	if((v0[i] == 11 and v1[i] == 33) or (v0[i] == 22 and v1[i] == 11) or (v0[i] == 33 and v1[i] == 22)):
		j = j + 1
	elif((v1[i] == 11 and v0[i] == 33) or (v1[i] == 22 and v0[i] == 11) or (v1[i] == 33 and v0[i] == 22)):
		k = k + 1
	else:
		i = i + 1
print(i)
if(v0 > v1):
	print("EUSAPIA")
elif(v1 > v0):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:53:54) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while(i < size(v0) and size(v0) == size(v1)):
	if((v0[i] == 11 and v1[i] == 33) or (v0[i] == 22 and v1[i] == 11) or (v0[i] == 33 and v1[i] == 22)):
		i = i + 1
		j = j + 1
	elif((v1[i] == 11 and v0[i] == 33) or (v1[i] == 22 and v0[i] == 11) or (v1[i] == 33 and v0[i] == 22)):
		i = i + 1
		k = k + 1
	else:
		i = i + 1
print(i)
if(v0 > v1):
	print("EUSAPIA")
elif(v1 > v0):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 10:54:57) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while(i < size(v0) and size(v0) == size(v1)):
	if((v0[i] == 11 and v1[i] == 33) or (v0[i] == 22 and v1[i] == 11) or (v0[i] == 33 and v1[i] == 22)):
		i = i + 1
		j = j + 1
	elif((v1[i] == 11 and v0[i] == 33) or (v1[i] == 22 and v0[i] == 11) or (v1[i] == 33 and v0[i] == 22)):
		i = i + 1
		k = k + 1
	else:
		i = i + 1
print(i)
if(v0 > v1):
	print("EUSAPIA")
elif(v1 > v0):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:03:12) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while(i < size(v0) and size(v0) == size(v1)):
	if((v0[i] == 11 and v1[i] == 33) or (v0[i] == 22 and v1[i] == 11) or (v0[i] == 33 and v1[i] == 22)):
		i = i + 1
		j = j + 1
	elif((v1[i] == 11 and v0[i] == 33) or (v1[i] == 22 and v0[i] == 11) or (v1[i] == 33 and v0[i] == 22)):
		i = i + 1
		k = k + 1
	else:
		i = i + 1
print(i)
if(v0 > v1):
	print("EUSAPIA")
elif(v1 > v0):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 11:04:46) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while(i < size(v0) and size(v0) == size(v1)):
	if((v0[i] == 11 and v1[i] == 33) or (v0[i] == 22 and v1[i] == 11) or (v0[i] == 33 and v1[i] == 22)):
		i = i + 1
		j = j + 1
	elif((v1[i] == 11 and v0[i] == 33) or (v1[i] == 22 and v0[i] == 11) or (v1[i] == 33 and v0[i] == 22)):
		i = i + 1
		k = k + 1
	else:
		i = i + 1
print(i)
if(j > k):
	print("EUSAPIA")
elif(k > j):
	print("BARSANULFO")
else:
	print("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 11:05:18) 
-- CODE:
from numpy import *

v0 = array(eval(input("Jogadas de Eusapia: ")))
v1 = array(eval(input("Jogadas de Barsanulfo: ")))

i = 0
j = 0
k = 0

while(i < size(v0) and size(v0) == size(v1)):
	if((v0[i] == 11 and v1[i] == 33) or (v0[i] == 22 and v1[i] == 11) or (v0[i] == 33 and v1[i] == 22)):
		i = i + 1
		j = j + 1
	elif((v1[i] == 11 and v0[i] == 33) or (v1[i] == 22 and v0[i] == 11) or (v1[i] == 33 and v0[i] == 22)):
		i = i + 1
		k = k + 1
	else:
		i = i + 1
print(i)
if(j > k):
	print("EUSAPIA")
elif(k > j):
	print("BARSANULFO")
else:
	print("EMPATE")
-- EXECUTION TIME:
0.377847
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
